Bug 331560 - "Order Received" reversed when copying messages from Local to IMAP account. r=neil, a=mkmelin